--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,5 @@
 @import "tailwindcss";
-
 @plugin "tailwindcss-animate";
-
 @custom-variant dark (&:is(.dark *));
 
 :root {
@@ -40,7 +38,7 @@
   --sidebar-ring: oklch(0.87 0 0);
 }
 
-.dark {
+/* .dark {
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.145 0 0);
@@ -73,7 +71,7 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(0.269 0 0);
   --sidebar-ring: oklch(0.439 0 0);
-}
+} */
 
 @theme inline {
   --font-inter: "Inter", sans-serif;
@@ -123,6 +121,6 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply font-inter bg-black antialiased;
+    @apply font-inter bg-background antialiased;
   }
 }
